--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Github pages test </h1>
+    <h1> Github pages test2 </h1>
     
 </body>
 </html>
